--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,29 @@
 
 html,
 body {
+  background-color: #faf7f5;
   margin: 0;
   padding: 0;
   font-family: 'Pretendard', sans-serif;
+}
+
+@media (min-width: 1280px) {
+  body {
+    max-width: 1280px;
+    margin: auto;
+  }
+}
+
+@media (min-width: 800px) and (max-width: 1279px) {
+  body {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+@media (max-width: 799px) {
+  body {
+    min-width: 800px;
+    overflow-x: auto;
+  }
 }
