--- a/components/molecules/CurrentForecast.module.css
+++ b/components/molecules/CurrentForecast.module.css
@@ -1,14 +1,16 @@
 .currentForecastContainer {
+  border-radius: 0.375rem;
+  border: 1px solid #dfdfdf;
+  background: #fff;
+  width: 90%;
+}
+.sectionLayout {
+  margin: 1rem 2rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   gap: 0.625rem;
-  border-radius: 0.375rem;
-  border: 1px solid #dfdfdf;
-  background: #fff;
-  width: 90%;
-  padding: 1rem 2rem;
 }
 .leftSection {
   display: inline-flex;
