--- a/components/atoms/CurrentLocationTime.module.css
+++ b/components/atoms/CurrentLocationTime.module.css
@@ -11,7 +11,7 @@
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 700;
-  line-height: 110%; /* 1.65rem */
+  line-height: 110%;
   letter-spacing: -0.0375rem;
 }
 .bottomSection {
@@ -27,7 +27,7 @@
   font-size: 2.25rem;
   font-style: normal;
   font-weight: 700;
-  line-height: 110%; /* 2.475rem */
+  line-height: 110%;
   letter-spacing: -0.0375rem;
 }
 .smallText {
@@ -37,6 +37,6 @@
   font-size: 0.875rem;
   font-style: normal;
   font-weight: 600;
-  line-height: 110%; /* 0.9625rem */
+  line-height: 110%;
   letter-spacing: -0.0375rem;
 }
