✨ [feat] currentWeather api 연결 완료

--- a/components/atoms/CurrentWeather.module.css
+++ b/components/atoms/CurrentWeather.module.css
@@ -8,18 +8,18 @@
   color: #3d3d3d;
   text-align: center;
   font-family: Pretendard;
-  font-size: 3.125rem;
+  font-size: 3rem;
   font-style: normal;
   font-weight: 700;
-  line-height: 110%; /* 3.4375rem */
+  line-height: 110%;
   letter-spacing: -0.0375rem;
 }
 .smallText {
   color: #8b8b8b;
   font-family: Pretendard;
-  font-size: 0.875rem;
+  font-size: 0.8rem;
   font-style: normal;
   font-weight: 600;
-  line-height: 140%; /* 1.225rem */
+  line-height: 140%;
   letter-spacing: -0.0375rem;
 }
