--- a/components/molecules/CurrentForecast.module.css
+++ b/components/molecules/CurrentForecast.module.css
@@ -5,7 +5,7 @@
   width: 90%;
 }
 .sectionLayout {
-  margin: 1rem 2rem;
+  margin: 1rem 2rem 1rem 1.2rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -15,6 +15,5 @@
 .leftSection {
   display: inline-flex;
   flex-direction: row;
-  gap: 0.3rem;
   align-items: center;
 }
