🐛 [fix] end 속성 경고 해결

--- a/components/atoms/CurrentLocationTime.module.css
+++ b/components/atoms/CurrentLocationTime.module.css
@@ -17,7 +17,7 @@
 .bottomSection {
   display: flex;
   flex-direction: row;
-  align-items: end;
+  align-items: flex-end;
   gap: 0.3rem;
 }
 .bigText {
